--- a/css/responsive2.css
+++ b/css/responsive2.css
@@ -8,11 +8,12 @@
 	}
 	body {
 		color: #ffffff;
+        overflow-x: hidden;
 	}
 	.responsive-structure > div {
 		width: 100vw;
 		height: 100%;
-	}
+    }
 	
 	.resp-title {
 		height: 100vh;
