--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,6 @@ body {
   padding: .5em;
   -webkit-box-shadow: -9px -2px 9px -6px rgba(46, 41, 46, 0.52);
   -moz-box-shadow: -9px -2px 9px -6px rgba(46, 41, 46, 0.52);
-  -o-box-shadow: -9px -2px 9px -6px rgba(46, 41, 46, 0.52);
   box-shadow: -9px -2px 9px -6px rgba(46, 41, 46, 0.52);
   transition: all .5s ease;
 }
@@ -36,16 +35,18 @@ body {
 }
 .section:nth-child(2) {
   background: #ffd700;
+  overflow-y: auto;
 }
 .section:nth-child(3) {
   background: #808080;
 }
 .section:nth-child(4) {
   background: #222222;
+  overflow: auto;
 }
 .section:nth-child(5) {
   background: #d9d9d9;
-  overflow: scroll;
+  overflow: auto;
 }
 .section .section-title {
   cursor: pointer;
@@ -127,7 +128,6 @@ body {
   text-transform: uppercase;
   box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.4), inset 0 0 0 5px #ffd700;
   -webkit-transition: 0.15s linear;
-  -moz-transition: 0.15s linear;
   transition: 0.15s linear;
 }
 .section-content-diff .divSquare h1 {
@@ -205,8 +205,6 @@ body {
 }
 .bar {
   -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  transform:  translate3d(0, 0, 0);
   background: #ffd700;
   clear: both;
   color: #ffffff;
