--- a/css/style.less
+++ b/css/style.less
@@ -36,16 +36,18 @@ body {
 	}
 	&:nth-child(2) {
 		background: #ffd700;
+        overflow-y: auto;
 	}
 	&:nth-child(3) {
 		background: #808080;
 	}
 	&:nth-child(4) {
 		background: #222222;
+        overflow: auto;
 	}
 	&:nth-child(5) {
 		background: #d9d9d9;
-		overflow: scroll;
+        overflow: auto;
 	}
 	
 	.section-title {
